@startuml

!include datalayer.wsdi
hide EagerTokenizer
hide EagerFileFetcher
hide BasicJsonizer
hide RulePopulationJsonizer

!include executors.wsdi

!include generic_widget.wsdi

!include async_progress_dialog.wsdi

!include input_data_lookup.wsdi

title input_data_lookup

package gui.generated #DDDDDD {
	class Ui_InputDataLookupGen < generated by Qt >
}

package input_data_lookup #FFFFFF {

class Header {
	name
	__init__(self, name, handle_row_fun)
	handle_cell(self, row_data, cell_id)
	__getattr__(self, _)
}

class LoadInputWorker {
	MIN_CHUNK_SIZE
	MAX_CHUNK_NUM
	employer
	run(self)
}
LoadInputWorker ..* InputDataLookup
LoadInputWorker --> Header: creates
LoadInputWorker --> SymbolTranslator: creates

class InputDataLookup {
	NO_FILENAME_TAG
	HEADERS_LOADED_EVENT
	SENTENCES_LOADED_EVENT
	DATA_CONFIG_EXT
	last_directory
	symbol_translator
	headers
	worker
	async_progress_dialog
	selected_filename
	selected_learning_filename
	selected_testing_filename
	__init__(self, last_directory)
	select_input_action(self)
	load_file_action(self)
	select_learning_set_action(self)
	select_testing_set_action(self)
	save_config_action(self)
	load_config_action(self)
}
InputDataLookup --|> GenericWidget
InputDataLookup ..* Ui_InputDataLookupGen
InputDataLookup --* LoadInputWorker
InputDataLookup --* AsyncProgressDialog
InputDataLookup ..> Header: uses
InputDataLookup --> SimulationExecutor: uses

AsyncProgressDialog ..* LoadInputWorker

}

@enduml